[2.x-typing-theta-00] refactored Type (Backing and more)